Fixed button width on mobile

--- a/src/AppBundle/Resources/public/css/style.scss
+++ b/src/AppBundle/Resources/public/css/style.scss
@@ -1384,7 +1384,7 @@ footer a {
       width: 80px;
 
       .btn {
-        width: 50%;
+        width: 37px;
         margin-left: 0;
         line-height: 24px;
       }
